--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
             <input type="radio" name="r" id="r3">
             <input type="radio" name="r" id="r4">
 
-            <div class="slide s1"><img src="images\sushi.webp" alt=""></div>
-            <div class="slide "><img src="images\pizza.webp" alt=""></div>
+            <div class="slide s1"><a href="pizza.html"><img src="images\pizza.webp" alt=""></a></div>
+            <div class="slide "><a href="rolly.html"><img src="images\sushi.webp" alt=""></a></div>
             <div class="slide"><img src="images\krylyshki.webp" alt=""></div>
             <div class="slide"><img src="images\sousy.webp" alt=""></div>
         </div>
