--- a/index.html
+++ b/index.html
@@ -63,18 +63,24 @@
             <input type="radio" name="r" id="r2">
             <input type="radio" name="r" id="r3">
             <input type="radio" name="r" id="r4">
+            <input type="radio" name="r" id="r5">
+            <input type="radio" name="r" id="r6">
 
-            <div class="slide s1"><a href="pizza.html"><img src="images\pizza.webp" alt=""></a></div>
-            <div class="slide "><a href="rolly.html"><img src="images\sushi.webp" alt=""></a></div>
-            <div class="slide"><img src="images\krylyshki.webp" alt=""></div>
-            <div class="slide"><img src="images\sousy.webp" alt=""></div>
+            <div class="slide s1"><a href="pizza.html"><img src="images\pizza2.jpeg" alt=""></a></div>
+            <div class="slide "><a href="rolly.html"><img src="images\sushi2.jpeg" alt=""></a></div>
+            <div class="slide"><img src="images\krylyshki2.jpg" alt=""></div>
+            <div class="slide"><img src="images\zharennyie.jpeg" alt=""></div>
+            <div class="slide "><img src="images\zapechonka.jpg" alt=""></div>
+            <div class="slide "><img src="images\napitki.jpg" alt=""></div>
         </div>
-            <div class="btn"><button class="button">sadfsdfs</button></div>
+
         <div class="navigation">
             <label for="r1" class="bar"></label>
             <label for="r2" class="bar"></label>
             <label for="r3" class="bar"></label>
             <label for="r4" class="bar"></label>
+            <label for="r5" class="bar"></label>
+            <label for="r6" class="bar"></label>
         </div>
 
     </div>
