--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@
 
             <div class="slide s1"><a href="pizza.html"><img src="images\pizza2.jpeg" alt=""></a></div>
             <div class="slide "><a href="rolly.html"><img src="images\sushi2.jpeg" alt=""></a></div>
-            <div class="slide"><img src="images\krylyshki2.jpg" alt=""></div>
-            <div class="slide"><img src="images\zharennyie.jpeg" alt=""></div>
-            <div class="slide "><img src="images\zapechonka.jpg" alt=""></div>
-            <div class="slide "><img src="images\napitki.jpg" alt=""></div>
+            <div class="slide"><a href="krylyia.html"><img src="images\krylyshki2.jpg" alt=""></a></div>
+            <div class="slide"><a href="zharRolls.html"><img src="images\zharennyie.jpeg" alt=""></a></div>
+            <div class="slide "><a href="zhapechenniyeRoll.html"><img src="images\zapechonka.jpg" alt=""></a></div>
+            <div class="slide "><a href="napitki.html"><img src="images\napitki.jpg" alt=""></a></div>
         </div>
 
         <div class="navigation">
