--- a/krylyia.html
+++ b/krylyia.html
@@ -10,16 +10,15 @@
 </head>
 <body>
     <nav>
-        <button class="nav1"><a href="final.html">Fast Food</a></button>
-        <button class="nav1"><a href="pizza.html" target="_blank">Pizza</a></button>
-        <button class="nav1"><a href="rolly.html">Роллы</a></button>
-        <button class="nav1">Rolls</button>
-        <button class="nav1">Fried Rolls</button>
-        <button class="nav1">Sets</button>
-        <button class="nav1">Drinks</button>
-        <button class="nav1">Sauses</button>
+        <button class="nav1"><a href="index.html">Главная страница</a></button>
+        <button class="nav1"><a href="rolly.html">Суши</a></button>
+        <button class="nav1"><a href="zhapechenniyeRoll.html" target="_blank">Запеченные роллы</a></button>
+        <button class="nav1"><a href="zharRolls.html">Жаренные роллы</a> </button>
+        <button class="nav1"><a href="pizza.html">Пиццы</a></button>
+        <button class="nav1"><a href="napitki.html">Напитки</a></button>
+        <button class="nav1"><a href="sous.html">Соусы</a></button>
     </nav>
-    <h1 style="margin-left: 290px;">Fast Food</h1>
+    <h1 style="margin-left: 290px;">Крылышки</h1>
     <div class="main">
         <div class="mini-containere">
             <img src="imgFiles/2022-05-02T10_33_51 (1).346Z-blob" alt="photo" class="mini-photo">
@@ -49,7 +48,7 @@
             </div>
         </div>
         <div class="mini-containere">
-            <img src="imgFiles/2022-05-17T12_11_30.698Z-IMG_0088.jfif" alt="photo" class="mini-photo">
+            <img src="imgFiles\nagetsy.jpg" alt="photo" class="mini-photo">
             <h3>Куринный нагетсы</h3>
             <p class="opisanie">Куринный нагетсы</p>
             <div class="price-container">
