--- a/napitki.html
+++ b/napitki.html
@@ -8,7 +8,16 @@
     <link rel="stylesheet" href="final.css">
 </head>
 <body>
-    <h1 style="margin-left: 280px;">Sodas</h1>
+    <nav>
+        <button class="nav1"><a href="index.html">Главная страница</a></button>
+        <button class="nav1"><a href="rolly.html">Суши</a></button>
+        <button class="nav1"><a href="zhapechenniyeRoll.html" target="_blank">Запеченные роллы</a></button>
+        <button class="nav1"><a href="zharRolls.html">Жаренные роллы</a> </button>
+        <button class="nav1"><a href="pizza.html">Пиццы</a></button>
+        <button class="nav1"><a href="krylyia.html">Крылышки</a></button>
+        <button class="nav1"><a href="sous.html">Соусы</a></button>
+    </nav>
+    <h1 style="margin-left: 290px;">Напитки</h1>
     <div class="main">
         <div class="mini-containere">
             <img src="imgFiles/sodas/2022-05-24T11_39_36.008Z-кола.jpg" alt="photo" class="mini-photo">
