--- a/rolly.html
+++ b/rolly.html
@@ -9,16 +9,15 @@
 </head>
 <body>
     <nav>
-        <button class="nav1"><a href="second.html">Fast Food</a></button>
-        <button class="nav1"><a href="third" target="_blank">Pizza</a></button>
-        <button class="nav1">Classic Rolls</button>
-        <button class="nav1">Rolls</button>
-        <button class="nav1">Fried Rolls</button>
-        <button class="nav1">Sets</button>
-        <button class="nav1">Drinks</button>
-        <button class="nav1">Sauses</button>
+        <button class="nav1"><a href="index.html">Главная страница</a></button>
+        <button class="nav1"><a href="pizza.html">Пиццы</a></button>
+        <button class="nav1"><a href="zhapechenniyeRoll.html" target="_blank">Запеченные роллы</a></button>
+        <button class="nav1"><a href="zharRolls.html">Жаренные роллы</a> </button>
+        <button class="nav1"><a href="napitki.html">Напитки</a></button>
+        <button class="nav1"><a href="krylyia.html">Крылышки</a></button>
+        <button class="nav1"><a href="sous.html">Соусы</a></button>
     </nav>
-    <h1 style="margin-left: 290px;">Pizza</h1>
+    <h1 style="margin-left: 290px;">Суши</h1>
     <div class="main">
         <div class="mini-containere">
             <img src="imgFiles/rolly/2022-05-03T13_57_08.325Z-blob" alt="photo" class="mini-photo">
