--- a/sous.html
+++ b/sous.html
@@ -8,8 +8,16 @@
     <link rel="stylesheet" href="final.css">
 </head>
 <body>
-    <button class="goBack"><a href="index.html">Go back</a></button>
-    <h1 style="margin-left: 250px;">Соусы</h1>
+    <nav>
+        <button class="nav1"><a href="index.html">Главная страница</a></button>
+        <button class="nav1"><a href="pizza.html">Пиццы</a></button>
+        <button class="nav1"><a href="zhapechenniyeRoll.html" target="_blank">Запеченные роллы</a></button>
+        <button class="nav1"><a href="zharRolls.html">Жаренные роллы</a> </button>
+        <button class="nav1"><a href="napitki.html">Напитки</a></button>
+        <button class="nav1"><a href="krylyia.html">Крылышки</a></button>
+        <button class="nav1"><a href="rolly.html">Суши</a></button>
+    </nav>
+    <h1 style="margin-left: 290px;">Соусы</h1>
     <div class="main">
         <div class="mini-containere soda-souse">
             <img src="imgFiles/sousess/2022-05-24T11_53_05.360Z-soy-sauce-isolated-on-white-background_88281-372.webp" alt="photo" class="mini-photo_souse" style="margin-bottom: 160px;">
