--- a/zharRolls.html
+++ b/zharRolls.html
@@ -8,6 +8,15 @@
     <link rel="stylesheet" href="final.css">
 </head>
 <body>
+    <nav>
+        <button class="nav1"><a href="index.html">Главная страница</a></button>
+        <button class="nav1"><a href="pizza.html">Пиццы</a></button>
+        <button class="nav1"><a href="sous.html" target="_blank">Соусы</a></button>
+        <button class="nav1"><a href="zhapechenniyeRoll.html">Запеченные роллы</a> </button>
+        <button class="nav1"><a href="napitki.html">Напитки</a></button>
+        <button class="nav1"><a href="krylyia.html">Крылышки</a></button>
+        <button class="nav1"><a href="rolly.html">Суши</a></button>
+    </nav>
     <h1 style="margin-left: 290px;">Жаренные роллы</h1>
     <div class="main">
         <div class="mini-containere">
