--- a/sous.html
+++ b/sous.html
@@ -20,7 +20,7 @@
     <h1 style="margin-left: 290px;">Соусы</h1>
     <div class="main">
         <div class="mini-containere soda-souse">
-            <img src="imgFiles/sousess/2022-05-24T11_53_05.360Z-soy-sauce-isolated-on-white-background_88281-372.webp" alt="photo" class="mini-photo_souse" style="margin-bottom: 160px;">
+            <img src="imgFiles/sousess/2022-05-24T11_53_05.360Z-soy-sauce-isolated-on-white-background_88281-372.webp" alt="photo" class="mini-photo_souse">
             <h3>Филадельфия</h3>
             <p class="opisanie">семга, сыр</p>
             <div class="price-container">
@@ -29,7 +29,7 @@
             </div>
         </div>
         <div class="mini-containere soda-souse">
-            <img src="imgFiles/sousess/2022-05-24T11_53_21.346Z-2136.jpg" alt="photo" class="mini-photo_souse" style="margin-bottom: 95px;">
+            <img src="imgFiles/sousess/2022-05-24T11_53_21.346Z-2136.jpg" alt="photo" class="mini-photo_souse">
             <h3>ПФила с огурцами</h3>
             <p class="opisanie">сыр моцарелла, куриное филе</p>
             <div class="price-container">
@@ -38,7 +38,7 @@
             </div>
         </div>
         <div class="mini-containere soda-souse">
-            <img src="imgFiles/sousess/2022-05-24T11_54_38.219Z-очень-вкусный-соус-тартара-в-шаре-на-белизне-белой-предпосылке-152568988.jpg" alt="photo" class="mini-photo_souse" style="margin-bottom: 150px;">
+            <img src="imgFiles/sousess/2022-05-24T11_54_38.219Z-очень-вкусный-соус-тартара-в-шаре-на-белизне-белой-предпосылке-152568988.jpg" alt="photo" class="mini-photo_souse">
             <h3>Онигара</h3>
             <p class="opisanie">угорь, унаги соус, кунжут, сыр</p>
             <div class="price-container">
@@ -47,7 +47,7 @@
             </div>
         </div>
         <div class="mini-containere soda-souse">
-            <img src="imgFiles/sousess/2022-05-24T11_55_02.006Z-images.jpg" alt="photo" class="mini-photo_souse" style="padding: 60px 0 35px 0; border-radius: 15px;">
+            <img src="imgFiles/sousess/2022-05-24T11_55_02.006Z-images.jpg" alt="photo" class="mini-photo_souse">
             <h3>Дракон</h3>
             <div class="dd">
                 <p class="opisanie">угорь, краб, огурец</p>
@@ -58,7 +58,7 @@
             </div>
         </div>
         <div class="mini-containere soda-souse">
-            <img src="imgFiles/sousess/2022-05-24T12_09_29.600Z-krasnyy-ili-belyy-imbir1.jpg" alt="photo" class="mini-photo_souse" style="margin-bottom: 150px;">
+            <img src="imgFiles/sousess/2022-05-24T12_09_29.600Z-krasnyy-ili-belyy-imbir1.jpg" alt="photo" class="mini-photo_souse">
             <h3>Кавасаки</h3>
             <p class="opisanie">жаренный лосось, блинчик, сыр</p>
             <div class="price-container">
