--- a/project/sous.html
+++ b/project/sous.html
@@ -18,7 +18,8 @@
         <button class="nav1"><a href="rolly.html">Суши</a></button>
     </nav>
     <h1 style="margin-left: 290px;">Соусы</h1>
-    <div class="main">
+    <div class="hfhf">
+            <div class="main">
         <div class="mini-containere soda-souse">
             <img src="imgFiles/sousess/2022-05-24T11_53_05.360Z-soy-sauce-isolated-on-white-background_88281-372.webp" alt="photo" class="mini-photo_souse" style="margin-bottom: 160px;">
             <h3>Филадельфия</h3>
@@ -81,6 +82,7 @@
             </div>
             
         </div>
+    </div>
     </div>
 </footer>
 </html>
