--- a/project/index.html
+++ b/project/index.html
@@ -27,7 +27,7 @@
                 <div class="numbers_1">
                     <a href="https://wa.me/7777014500" class="numsLink">
                         <img class="whatsappImg" src="images\whatsApp.jpg" alt="whatsapp">
-                        <h3 class="nums">87777014500</h3>
+                        <h3 class="nums">+77777014500</h3>
                     </a>
                 </div>
             </div>
@@ -49,16 +49,16 @@
             <h4 class="text">Контакты&nbsp;</h4>
         </a>
     </div>
-    <div id="fixedPos" class="fixedPos">
+    <!-- <div id="fixedPos" class="fixedPos">
         <h1>asdf</h1>
-    </div>
+    </div> -->
     <div class="popup" id="popup">
         <div class="popup_body">
             <div class="popup_content">
                 <a href="#fixedPos" class="popup_close">X</a>
-                <div class="popup_title">My orders</div>
+                <div class="popup_title">Мои заказы</div>
                 <div class="popup_text">
-                    This add is not ready for now!                        
+                    Данное время у вас отсуствует заказы!                        
                 </div>
             </div>
         </div>
@@ -67,7 +67,7 @@
         <div class="popup_body">
             <div class="popup_content">
                 <a href="#fixedPos" class="popup_close">X</a>
-                <div class="popup_title">Discount</div>
+                <div class="popup_title">Скидки</div>
                 <div class="popup_text">
                     На все продукты, кроме суммы сетов в корзине, действуют следующие скидки:
                         <ul>
@@ -83,7 +83,7 @@
         <div class="popup_body">
             <div class="popup_content">
                 <a href="#fixedPos" class="popup_close">X</a>
-                <div class="popup_title">Delivery</div>
+                <div class="popup_title">Доставка</div>
                 <div class="popup_text">
                     <ul>
                         <li>Время доставки от 45 минут.</li>
@@ -100,7 +100,7 @@
         <div class="popup_body">
             <div class="popup_content">
                 <a href="#fixedPos" class="popup_close">X</a>
-                <div class="popup_title">Contacts</div>
+                <div class="popup_title">Контакты</div>
                 <div class="popup_text">
                     ГРАФИК РАБОТЫ: 10:00 - 02:00
                     <br>
@@ -110,7 +110,7 @@
                     <br>
                     +77056650001
                     <br>
-                    +77056650001
+                    +77777014500
                 </div>
             </div>
         </div>
