--- a/project/pizza.html
+++ b/project/pizza.html
@@ -19,86 +19,90 @@
         <button class="nav1"><a href="sous.html">Соусы</a></button>
     </nav>
     <h1 style="margin-left: 290px;">Пиццы</h1>
-    <div class="main">
-        <div class="mini-containere">
-            <img src="imgFiles/pizza/2022-05-03T12_52_49.020Z-blob" alt="photo" class="mini-photo">
-            <h3>Пицца вегетарианская</h3>
-            <p class="opisanie">сыр моцарелла,шапиньоны, помидоры, болгарский перец</p>
-            <div class="price-container">
-                <p class="price">500 &#8381;</p> 
-                <button class="korzina" id="kor">В корзину</button>
-            </div>
-        </div>
-        <div class="mini-containere">
-            <img src="imgFiles/pizza/2022-05-03T12_53_32.237Z-blob" alt="photo" class="mini-photo">
-            <h3>Пицца 4 сезона</h3>
-            <p class="opisanie">сыр моцарелла, куриное филе, помидоры, шапиньоны, салями</p>
-            <div class="price-container">
-                <p class="price">800 &#8381;</p> 
-                <button class="korzina">В корзину</button>
-            </div>
-        </div>
-        <div class="mini-containere">
-            <img src="imgFiles/pizza/2022-05-03T12_53_47.508Z-blob" alt="photo" class="mini-photo">
-            <h3>Пицца пепперони</h3>
-            <p class="opisanie">сыр моцарелла, салями (Халял)</p>
-            <div class="price-container">
-                <p class="price">1000 &#8381;</p> 
-                <button class="korzina">В корзину</button>
-            </div>
-        </div>
-        <div class="mini-containere">
-            <img src="imgFiles/pizza/2022-05-03T12_58_30.238Z-blob" alt="photo" class="mini-photo">
-            <h3>Пицца болоньезе</h3>
-            <p class="opisanie">сыр моцарелла, фарш говяжий, болгарский перец</p>
-            <div class="price-container">
-                <p class="price">750 &#8381;</p> 
-                <button class="korzina">В корзину</button>
-            </div>
-        </div>
-        <div class="mini-containere">
-            <img src="imgFiles/pizza/2022-05-03T12_59_20.247Z-blob" alt="photo" class="mini-photo">
-            <h3>Грибная</h3>
-            <p class="opisanie">сыр моцарелла, шампиньоны   </p>
-            <div class="price-container">
-                <p class="price">500 &#8381;</p>                
-                 <button class="korzina">В корзину</button>
-            </div>
-        </div>
-        <div class="mini-containere">
-            <img src="imgFiles/pizza/2022-05-03T13_00_29.081Z-blob" alt="photo" class="mini-photo">
-            <h3>Ветчина с грибами</h3>
-            <p class="opisanie">сыр моцарелла, ветчина, шампиньоны</p>
-            <div class="price-container">
-                <p class="price">500 &#8381;</p> 
-                <button class="korzina">В корзину</button>
 
-            </div>
-        </div>
-        <div class="mini-containere">
-            <img src="imgFiles/pizza/2022-05-03T12_59_50.041Z-blob" alt="photo" class="mini-photo">
-            <h3>Пицца курица и грибы
-            </h3>
-            <p class="opisanie">сыр моцарелла, куриное филе, шампиньоны</p>
-            <div class="price-container">
-                <p class="price">500 &#8381;</p> 
-                <button class="korzina">В корзину</button>
+    <div class="hfhf">
 
+        <div class="main">
+            <div class="mini-containere">
+                <img src="imgFiles/pizza/2022-05-03T12_52_49.020Z-blob" alt="photo" class="mini-photo">
+                <h3>Пицца вегетарианская</h3>
+                <p class="opisanie">сыр моцарелла,шапиньоны, помидоры, болгарский перец</p>
+                <div class="price-container">
+                    <p class="price">500 &#8381;</p> 
+                    <button class="korzina" id="kor">В корзину</button>
+                </div>
             </div>
-        </div>
-        <div class="mini-containere">
-            <img src="imgFiles/pizza/2022-05-03T12_58_47.900Z-blob" alt="photo" class="mini-photo" >
-            <h3>Пицца маргарита</h3>
-            <p class="opisanie">сыр сыр моцарелла,помидоры</p>
-            <button class="korzina">В корзину</button>
-        </div>
-        <div class="mini-containere">
-            <img src="imgFiles/pizza/2022-05-03T13_02_20.142Z-blob  " alt="photo" class="mini-photo">
-            <h3>Деревенская</h3>
-            <p class="opisanie">сыр моцарелла, шампиньоны, помидоры</p>
-            <div class="price-container">
-                <p class="price">500 &#8381;</p> 
+            <div class="mini-containere">
+                <img src="imgFiles/pizza/2022-05-03T12_53_32.237Z-blob" alt="photo" class="mini-photo">
+                <h3>Пицца 4 сезона</h3>
+                <p class="opisanie">сыр моцарелла, куриное филе, помидоры, шапиньоны, салями</p>
+                <div class="price-container">
+                    <p class="price">800 &#8381;</p> 
+                    <button class="korzina">В корзину</button>
+                </div>
+            </div>
+            <div class="mini-containere">
+                <img src="imgFiles/pizza/2022-05-03T12_53_47.508Z-blob" alt="photo" class="mini-photo">
+                <h3>Пицца пепперони</h3>
+                <p class="opisanie">сыр моцарелла, салями (Халял)</p>
+                <div class="price-container">
+                    <p class="price">1000 &#8381;</p> 
+                    <button class="korzina">В корзину</button>
+                </div>
+            </div>
+            <div class="mini-containere">
+                <img src="imgFiles/pizza/2022-05-03T12_58_30.238Z-blob" alt="photo" class="mini-photo">
+                <h3>Пицца болоньезе</h3>
+                <p class="opisanie">сыр моцарелла, фарш говяжий, болгарский перец</p>
+                <div class="price-container">
+                    <p class="price">750 &#8381;</p> 
+                    <button class="korzina">В корзину</button>
+                </div>
+            </div>
+            <div class="mini-containere">
+                <img src="imgFiles/pizza/2022-05-03T12_59_20.247Z-blob" alt="photo" class="mini-photo">
+                <h3>Грибная</h3>
+                <p class="opisanie">сыр моцарелла, шампиньоны   </p>
+                <div class="price-container">
+                    <p class="price">500 &#8381;</p>                
+                     <button class="korzina">В корзину</button>
+                </div>
+            </div>
+            <div class="mini-containere">
+                <img src="imgFiles/pizza/2022-05-03T13_00_29.081Z-blob" alt="photo" class="mini-photo">
+                <h3>Ветчина с грибами</h3>
+                <p class="opisanie">сыр моцарелла, ветчина, шампиньоны</p>
+                <div class="price-container">
+                    <p class="price">500 &#8381;</p> 
+                    <button class="korzina">В корзину</button>
+    
+                </div>
+            </div>
+            <div class="mini-containere">
+                <img src="imgFiles/pizza/2022-05-03T12_59_50.041Z-blob" alt="photo" class="mini-photo">
+                <h3>Пицца курица и грибы
+                </h3>
+                <p class="opisanie">сыр моцарелла, куриное филе, шампиньоны</p>
+                <div class="price-container">
+                    <p class="price">500 &#8381;</p> 
+                    <button class="korzina">В корзину</button>
+    
+                </div>
+            </div>
+            <div class="mini-containere">
+                <img src="imgFiles/pizza/2022-05-03T12_58_47.900Z-blob" alt="photo" class="mini-photo" >
+                <h3>Пицца маргарита</h3>
+                <p class="opisanie">сыр сыр моцарелла,помидоры</p>
                 <button class="korzina">В корзину</button>
+            </div>
+            <div class="mini-containere">
+                <img src="imgFiles/pizza/2022-05-03T13_02_20.142Z-blob  " alt="photo" class="mini-photo">
+                <h3>Деревенская</h3>
+                <p class="opisanie">сыр моцарелла, шампиньоны, помидоры</p>
+                <div class="price-container">
+                    <p class="price">500 &#8381;</p> 
+                    <button class="korzina">В корзину</button>
+                </div>
             </div>
         </div>
     </div>
