--- a/project/krylyia.html
+++ b/project/krylyia.html
@@ -21,68 +21,70 @@
         </nav>
     </div>
     <h1 style="margin-left: 290px;">Крылышки</h1>
-    <div class="main">
-        <div class="mini-containere">
-            <img src="imgFiles/2022-05-02T10_33_51 (1).346Z-blob" alt="photo" class="mini-photo">
-            <h3>Крылышки 8 штук</h3>
-            <p class="opisanie">острые куринный крылышки</p>
-            <div class="price-container">
-                <p class="price">500 &#8381;</p> 
-                <button class="korzina">В корзину</button>
+    <div class="hfhf">
+        <div class="main">
+            <div class="mini-containere">
+                <img src="imgFiles/2022-05-02T10_33_51 (1).346Z-blob" alt="photo" class="mini-photo">
+                <h3>Крылышки 8 штук</h3>
+                <p class="opisanie">острые куринный крылышки</p>
+                <div class="price-container">
+                    <p class="price">500 &#8381;</p> 
+                    <button class="korzina">В корзину</button>
+                </div>
             </div>
-        </div>
-        <div class="mini-containere">
-            <img src="imgFiles/2022-05-02T10_33_51 (1).346Z-blob" alt="photo" class="mini-photo">
-            <h3>Крылышки 16  штук</h3>
-            <p class="opisanie">острые куринный крылышки</p>
-            <div class="price-container">
-                <p class="price">800 &#8381;</p> 
-                <button class="korzina">В корзину</button>
+            <div class="mini-containere">
+                <img src="imgFiles/2022-05-02T10_33_51 (1).346Z-blob" alt="photo" class="mini-photo">
+                <h3>Крылышки 16  штук</h3>
+                <p class="opisanie">острые куринный крылышки</p>
+                <div class="price-container">
+                    <p class="price">800 &#8381;</p> 
+                    <button class="korzina">В корзину</button>
+                </div>
             </div>
-        </div>
-        <div class="mini-containere">
-            <img src="imgFiles/2022-05-02T10_33_51 (1).346Z-blob" alt="photo" class="mini-photo">
-            <h3>Крылышки 25 штук</h3>
-            <p class="opisanie">острые куринный крылышки</p>
-            <div class="price-container">
-                <p class="price">1000 &#8381;</p> 
-                <button class="korzina">В корзину</button>
+            <div class="mini-containere">
+                <img src="imgFiles/2022-05-02T10_33_51 (1).346Z-blob" alt="photo" class="mini-photo">
+                <h3>Крылышки 25 штук</h3>
+                <p class="opisanie">острые куринный крылышки</p>
+                <div class="price-container">
+                    <p class="price">1000 &#8381;</p> 
+                    <button class="korzina">В корзину</button>
+                </div>
             </div>
-        </div>
-        <div class="mini-containere">
-            <img src="imgFiles\nagetsy.jpg" alt="photo" class="mini-photo">
-            <h3>Куринный нагетсы</h3>
-            <p class="opisanie">Куринный нагетсы</p>
-            <div class="price-container">
-                <p class="price">750 &#8381;</p> 
-                <button class="korzina">В корзину</button>
+            <div class="mini-containere">
+                <img src="imgFiles\nagetsy.jpg" alt="photo" class="mini-photo">
+                <h3>Куринный нагетсы</h3>
+                <p class="opisanie">Куринный нагетсы</p>
+                <div class="price-container">
+                    <p class="price">750 &#8381;</p> 
+                    <button class="korzina">В корзину</button>
+                </div>
             </div>
-        </div>
-        <div class="mini-containere">
-            <img src="imgFiles/2022-05-14T13_00_14.935Z-IMG_0089.jfif" alt="photo" class="mini-photo">
-            <h3>Корн док</h3>
-            <p class="opisanie">сардельки в кляре</p>
-            <div class="price-container">
-                <p class="price">500 &#8381;</p> 
-                <button class="korzina">В корзину</button>
+            <div class="mini-containere">
+                <img src="imgFiles/2022-05-14T13_00_14.935Z-IMG_0089.jfif" alt="photo" class="mini-photo">
+                <h3>Корн док</h3>
+                <p class="opisanie">сардельки в кляре</p>
+                <div class="price-container">
+                    <p class="price">500 &#8381;</p> 
+                    <button class="korzina">В корзину</button>
+                </div>
             </div>
-        </div>
-        <div class="mini-containere">
-            <img src="imgFiles/2022-05-14T13_04_23.648Z-IMG_0095.jfif" alt="photo" class="mini-photo">
-            <h3 style="padding-top: 90px;">Фри</h3>
-            <p class="opisanie">картофельные фри</p>
-            <div class="price-container">
-                <p class="price">500 &#8381;</p> 
-                <button class="korzina">В корзину</button>
+            <div class="mini-containere">
+                <img src="imgFiles/2022-05-14T13_04_23.648Z-IMG_0095.jfif" alt="photo" class="mini-photo">
+                <h3 style="padding-top: 90px;">Фри</h3>
+                <p class="opisanie">картофельные фри</p>
+                <div class="price-container">
+                    <p class="price">500 &#8381;</p> 
+                    <button class="korzina">В корзину</button>
+                </div>
             </div>
-        </div>
-        <div class="mini-containere">
-            <img src="imgFiles/2022-05-14T13_00_27.231Z-IMG_0087.jfif" alt="photo" class="mini-photo">
-            <h3>Сырныйе палочки</h3>
-            <p class="opisanie">острые куринный крылышки</p>
-            <div class="price-container">
-                <p class="price">500 &#8381;</p> 
-                <button class="korzina">В корзину</button>
+            <div class="mini-containere">
+                <img src="imgFiles/2022-05-14T13_00_27.231Z-IMG_0087.jfif" alt="photo" class="mini-photo">
+                <h3>Сырныйе палочки</h3>
+                <p class="opisanie">острые куринный крылышки</p>
+                <div class="price-container">
+                    <p class="price">500 &#8381;</p> 
+                    <button class="korzina">В корзину</button>
+                </div>
             </div>
         </div>
     </div>
