--- a/project/napitki.html
+++ b/project/napitki.html
@@ -18,59 +18,61 @@
         <button class="nav1"><a href="sous.html">Соусы</a></button>
     </nav>
     <h1 style="margin-left: 290px;">Напитки</h1>
-    <div class="main">
-        <div class="mini-containere">
-            <img src="imgFiles/sodas/2022-05-24T11_39_36.008Z-кола.jpg" alt="photo" class="mini-photo">
-            <h3>Cola</h3>
-            <p class="opisanie">0.5</p>
-            <div class="price-container">
-                <p class="price">100 &#8381;</p> 
-                <button class="korzina">В корзину</button>
+    <div class="hfhf">
+        <div class="main">
+            <div class="mini-containere">
+                <img src="imgFiles/sodas/2022-05-24T11_39_36.008Z-кола.jpg" alt="photo" class="mini-photo">
+                <h3>Cola</h3>
+                <p class="opisanie">0.5</p>
+                <div class="price-container">
+                    <p class="price">100 &#8381;</p> 
+                    <button class="korzina">В корзину</button>
+                </div>
             </div>
-        </div>
-        <div class="mini-containere">
-            <img src="imgFiles/sodas/2022-05-24T11_39_36.008Z-кола.jpg" alt="photo" class="mini-photo">
-            <h3>Cola</h3>
-            <p class="opisanie">1L</p>
-            <div class="price-container">
-                <p class="price">200 &#8381;</p> 
-                <button class="korzina">В корзину</button>
+            <div class="mini-containere">
+                <img src="imgFiles/sodas/2022-05-24T11_39_36.008Z-кола.jpg" alt="photo" class="mini-photo">
+                <h3>Cola</h3>
+                <p class="opisanie">1L</p>
+                <div class="price-container">
+                    <p class="price">200 &#8381;</p> 
+                    <button class="korzina">В корзину</button>
+                </div>
             </div>
-        </div>
-        <div class="mini-containere">
-            <img src="imgFiles/sodas/631986947.jpg" alt="photo" class="mini-photo">
-            <h3>Sprite</h3>
-            <p class="opisanie">0.5</p>
-            <div class="price-container">
-                <p class="price">100 &#8381;</p> 
-                <button class="korzina">В корзину</button>
+            <div class="mini-containere">
+                <img src="imgFiles/sodas/631986947.jpg" alt="photo" class="mini-photo">
+                <h3>Sprite</h3>
+                <p class="opisanie">0.5</p>
+                <div class="price-container">
+                    <p class="price">100 &#8381;</p> 
+                    <button class="korzina">В корзину</button>
+                </div>
             </div>
-        </div>
-        <div class="mini-containere">
-            <img src="imgFiles/sodas/631986947.jpg" alt="photo" class="mini-photo">
-            <h3>Sprite</h3>
-            <p class="opisanie">1L</p>
-            <div class="price-container">
-                <p class="price">200 &#8381;</p> 
-                <button class="korzina">В корзину</button>
+            <div class="mini-containere">
+                <img src="imgFiles/sodas/631986947.jpg" alt="photo" class="mini-photo">
+                <h3>Sprite</h3>
+                <p class="opisanie">1L</p>
+                <div class="price-container">
+                    <p class="price">200 &#8381;</p> 
+                    <button class="korzina">В корзину</button>
+                </div>
             </div>
-        </div>
-        <div class="mini-containere">
-            <img src="imgFiles/sodas/fanta_050419_01.jpg" alt="photo" class="mini-photo">
-            <h3>Fanta</h3>
-            <p class="opisanie">0.5</p>
-            <div class="price-container">
-                <p class="price">100 &#8381;</p> 
-                <button class="korzina">В корзину</button>
+            <div class="mini-containere">
+                <img src="imgFiles/sodas/fanta_050419_01.jpg" alt="photo" class="mini-photo">
+                <h3>Fanta</h3>
+                <p class="opisanie">0.5</p>
+                <div class="price-container">
+                    <p class="price">100 &#8381;</p> 
+                    <button class="korzina">В корзину</button>
+                </div>
             </div>
-        </div>
-        <div class="mini-containere">
-            <img src="imgFiles/sodas/fanta_050419_01.jpg" alt="photo" class="mini-photo">
-            <h3>Fanta</h3>
-            <p class="opisanie">1L</p>
-            <div class="price-container">
-                <p class="price">200 &#8381;</p> 
-                <button class="korzina">В корзину</button>
+            <div class="mini-containere">
+                <img src="imgFiles/sodas/fanta_050419_01.jpg" alt="photo" class="mini-photo">
+                <h3>Fanta</h3>
+                <p class="opisanie">1L</p>
+                <div class="price-container">
+                    <p class="price">200 &#8381;</p> 
+                    <button class="korzina">В корзину</button>
+                </div>
             </div>
         </div>
     </div>
