--- a/project/rolly.html
+++ b/project/rolly.html
@@ -18,88 +18,90 @@
         <button class="nav1"><a href="sous.html">Соусы</a></button>
     </nav>
     <h1 style="margin-left: 290px;">Суши</h1>
-    <div class="main">
-        <div class="mini-containere">
-            <img src="imgFiles/rolly/2022-05-03T13_57_08.325Z-blob" alt="photo" class="mini-photo">
-            <h3>Филадельфия</h3>
-            <p class="opisanie">семга, сыр</p>
-            <div class="price-container">
-                <p class="price">500 &#8381;</p> 
-                <button class="korzina" id="kor">В корзину</button>
+    <div class="hfhf">
+        <div class="main">
+            <div class="mini-containere">
+                <img src="imgFiles/rolly/2022-05-03T13_57_08.325Z-blob" alt="photo" class="mini-photo">
+                <h3>Филадельфия</h3>
+                <p class="opisanie">семга, сыр</p>
+                <div class="price-container">
+                    <p class="price">500 &#8381;</p> 
+                    <button class="korzina" id="kor">В корзину</button>
+                </div>
             </div>
-        </div>
-        <div class="mini-containere">
-            <img src="imgFiles/rolly/2022-05-03T13_59_39.175Z-blob" alt="photo" class="mini-photo">
-            <h3>ПФила с огурцами</h3>
-            <p class="opisanie">сыр моцарелла, куриное филе</p>
-            <div class="price-container">
-                <p class="price">800 &#8381;</p> 
-                <button class="korzina">В корзину</button>
+            <div class="mini-containere">
+                <img src="imgFiles/rolly/2022-05-03T13_59_39.175Z-blob" alt="photo" class="mini-photo">
+                <h3>ПФила с огурцами</h3>
+                <p class="opisanie">сыр моцарелла, куриное филе</p>
+                <div class="price-container">
+                    <p class="price">800 &#8381;</p> 
+                    <button class="korzina">В корзину</button>
+                </div>
             </div>
-        </div>
-        <div class="mini-containere">
-            <img src="imgFiles/rolly/2022-05-03T13_58_00.554Z-blob" alt="photo" class="mini-photo">
-            <h3>Онигара</h3>
-            <p class="opisanie">угорь, унаги соус, кунжут, сыр</p>
-            <div class="price-container">
-                <p class="price">1000 &#8381;</p> 
-                <button class="korzina">В корзину</button>
+            <div class="mini-containere">
+                <img src="imgFiles/rolly/2022-05-03T13_58_00.554Z-blob" alt="photo" class="mini-photo">
+                <h3>Онигара</h3>
+                <p class="opisanie">угорь, унаги соус, кунжут, сыр</p>
+                <div class="price-container">
+                    <p class="price">1000 &#8381;</p> 
+                    <button class="korzina">В корзину</button>
+                </div>
             </div>
-        </div>
-        <div class="mini-containere">
-            <img src="imgFiles/rolly/2022-05-14T11_48_02.877Z-IMG_0050.jfif" alt="photo" class="mini-photo" style="padding: 60px 0 35px 0; border-radius: 15px;">
-            <h3>Дракон</h3>
-            <p class="opisanie">угорь, краб, огурец</p>
-            <div class="price-container">
-                <p class="price">750 &#8381;</p> 
-                <button class="korzina">В корзину</button>
+            <div class="mini-containere">
+                <img src="imgFiles/rolly/2022-05-14T11_48_02.877Z-IMG_0050.jfif" alt="photo" class="mini-photo" style="padding: 60px 0 35px 0; border-radius: 15px;">
+                <h3>Дракон</h3>
+                <p class="opisanie">угорь, краб, огурец</p>
+                <div class="price-container">
+                    <p class="price">750 &#8381;</p> 
+                    <button class="korzina">В корзину</button>
+                </div>
             </div>
-        </div>
-        <div class="mini-containere">
-            <img src="imgFiles/rolly/2022-05-14T11_55_59.427Z-IMG_0047.jfif" alt="photo" class="mini-photo">
-            <h3>Кавасаки</h3>
-            <p class="opisanie">жаренный лосось, блинчик, сыр</p>
-            <div class="price-container">
-                <p class="price">500 &#8381;</p>                
-                 <button class="korzina">В корзину</button>
+            <div class="mini-containere">
+                <img src="imgFiles/rolly/2022-05-14T11_55_59.427Z-IMG_0047.jfif" alt="photo" class="mini-photo">
+                <h3>Кавасаки</h3>
+                <p class="opisanie">жаренный лосось, блинчик, сыр</p>
+                <div class="price-container">
+                    <p class="price">500 &#8381;</p>                
+                     <button class="korzina">В корзину</button>
+                </div>
             </div>
-        </div>
-        <div class="mini-containere">
-            <img src="imgFiles/rolly/2022-05-14T11_56_56.351Z-IMG_0045.jfif" alt="photo" class="mini-photo">
-            <h3>Фристайл</h3>
-            <p class="opisanie">креветки, краб, огурец, сыр </p>
-            <div class="price-container">
-                <p class="price">500 &#8381;</p> 
-                <button class="korzina">В корзину</button>
-
+            <div class="mini-containere">
+                <img src="imgFiles/rolly/2022-05-14T11_56_56.351Z-IMG_0045.jfif" alt="photo" class="mini-photo">
+                <h3>Фристайл</h3>
+                <p class="opisanie">креветки, краб, огурец, сыр </p>
+                <div class="price-container">
+                    <p class="price">500 &#8381;</p> 
+                    <button class="korzina">В корзину</button>
+    
+                </div>
             </div>
-        </div>
-        <div class="mini-containere">
-            <img src="imgFiles/rolly/2022-05-14T12_03_55.850Z-IMG_0051.jfif" alt="photo" class="mini-photo">
-            <h3>Калифорния Green</h3>
-            <p class="opisanie">сыр моцарелла, куриное филе</p>
-            <div class="price-container">   
-                <p class="price">500 &#8381;</p> 
-                <button class="korzina">В корзину</button>
-
+            <div class="mini-containere">
+                <img src="imgFiles/rolly/2022-05-14T12_03_55.850Z-IMG_0051.jfif" alt="photo" class="mini-photo">
+                <h3>Калифорния Green</h3>
+                <p class="opisanie">сыр моцарелла, куриное филе</p>
+                <div class="price-container">   
+                    <p class="price">500 &#8381;</p> 
+                    <button class="korzina">В корзину</button>
+    
+                </div>
             </div>
-        </div>
-        <div class="mini-containere">
-            <img src="imgFiles/rolly/2022-05-30T06_30_51.618Z-IMG_1200.jfif" alt="photo" class="mini-photo" >
-            <h3>Филадельфия летняя</h3>
-            <p class="opisanie">Огурец, творожный сыр, рис</p>
-            <div class="price-container">
-                <p class="price">250 &#8381;</p>
-                <button class="korzina">В корзину</button>
+            <div class="mini-containere">
+                <img src="imgFiles/rolly/2022-05-30T06_30_51.618Z-IMG_1200.jfif" alt="photo" class="mini-photo" >
+                <h3>Филадельфия летняя</h3>
+                <p class="opisanie">Огурец, творожный сыр, рис</p>
+                <div class="price-container">
+                    <p class="price">250 &#8381;</p>
+                    <button class="korzina">В корзину</button>
+                </div>
             </div>
-        </div>
-        <div class="mini-containere">
-            <img src="imgFiles/rolly/2022-06-07T09_08_33.413Z-IMG_0052.jfif" alt="photo" class="mini-photo">
-            <h3>Фила с огурцами</h3>
-            <p class="opisanie">семга, сыр, кунжут</p>
-            <div class="price-container">
-                <p class="price">500 &#8381;</p> 
-                <button class="korzina">В корзину</button>
+            <div class="mini-containere">
+                <img src="imgFiles/rolly/2022-06-07T09_08_33.413Z-IMG_0052.jfif" alt="photo" class="mini-photo">
+                <h3>Фила с огурцами</h3>
+                <p class="opisanie">семга, сыр, кунжут</p>
+                <div class="price-container">
+                    <p class="price">500 &#8381;</p> 
+                    <button class="korzina">В корзину</button>
+                </div>
             </div>
         </div>
     </div>
