--- a/project/krylyia.html
+++ b/project/krylyia.html
@@ -28,7 +28,7 @@
                 <h3>Крылышки 8 штук</h3>
                 <p class="opisanie">острые куринный крылышки</p>
                 <div class="price-container">
-                    <p class="price">500 &#8381;</p> 
+                    <p class="price">500Тг</p> 
                     <button class="korzina">В корзину</button>
                 </div>
             </div>
@@ -37,7 +37,7 @@
                 <h3>Крылышки 16  штук</h3>
                 <p class="opisanie">острые куринный крылышки</p>
                 <div class="price-container">
-                    <p class="price">800 &#8381;</p> 
+                    <p class="price">800Тг</p> 
                     <button class="korzina">В корзину</button>
                 </div>
             </div>
@@ -46,7 +46,7 @@
                 <h3>Крылышки 25 штук</h3>
                 <p class="opisanie">острые куринный крылышки</p>
                 <div class="price-container">
-                    <p class="price">1000 &#8381;</p> 
+                    <p class="price">1000Тг</p> 
                     <button class="korzina">В корзину</button>
                 </div>
             </div>
@@ -55,7 +55,7 @@
                 <h3>Куринный нагетсы</h3>
                 <p class="opisanie">Куринный нагетсы</p>
                 <div class="price-container">
-                    <p class="price">750 &#8381;</p> 
+                    <p class="price">750Тг</p> 
                     <button class="korzina">В корзину</button>
                 </div>
             </div>
@@ -64,7 +64,7 @@
                 <h3>Корн док</h3>
                 <p class="opisanie">сардельки в кляре</p>
                 <div class="price-container">
-                    <p class="price">500 &#8381;</p> 
+                    <p class="price">500Тг</p> 
                     <button class="korzina">В корзину</button>
                 </div>
             </div>
@@ -73,7 +73,7 @@
                 <h3 style="padding-top: 90px;">Фри</h3>
                 <p class="opisanie">картофельные фри</p>
                 <div class="price-container">
-                    <p class="price">500 &#8381;</p> 
+                    <p class="price">500Тг</p> 
                     <button class="korzina">В корзину</button>
                 </div>
             </div>
@@ -82,7 +82,7 @@
                 <h3>Сырныйе палочки</h3>
                 <p class="opisanie">острые куринный крылышки</p>
                 <div class="price-container">
-                    <p class="price">500 &#8381;</p> 
+                    <p class="price">500Тг</p> 
                     <button class="korzina">В корзину</button>
                 </div>
             </div>
