--- a/project/napitki.html
+++ b/project/napitki.html
@@ -25,7 +25,7 @@
                 <h3>Cola</h3>
                 <p class="opisanie">0.5</p>
                 <div class="price-container">
-                    <p class="price">100 &#8381;</p> 
+                    <p class="price">100Тг</p> 
                     <button class="korzina">В корзину</button>
                 </div>
             </div>
@@ -34,7 +34,7 @@
                 <h3>Cola</h3>
                 <p class="opisanie">1L</p>
                 <div class="price-container">
-                    <p class="price">200 &#8381;</p> 
+                    <p class="price">200Тг</p> 
                     <button class="korzina">В корзину</button>
                 </div>
             </div>
@@ -43,7 +43,7 @@
                 <h3>Sprite</h3>
                 <p class="opisanie">0.5</p>
                 <div class="price-container">
-                    <p class="price">100 &#8381;</p> 
+                    <p class="price">100Тг</p> 
                     <button class="korzina">В корзину</button>
                 </div>
             </div>
@@ -52,7 +52,7 @@
                 <h3>Sprite</h3>
                 <p class="opisanie">1L</p>
                 <div class="price-container">
-                    <p class="price">200 &#8381;</p> 
+                    <p class="price">200Тг</p> 
                     <button class="korzina">В корзину</button>
                 </div>
             </div>
@@ -61,7 +61,7 @@
                 <h3>Fanta</h3>
                 <p class="opisanie">0.5</p>
                 <div class="price-container">
-                    <p class="price">100 &#8381;</p> 
+                    <p class="price">100Тг</p> 
                     <button class="korzina">В корзину</button>
                 </div>
             </div>
@@ -70,7 +70,7 @@
                 <h3>Fanta</h3>
                 <p class="opisanie">1L</p>
                 <div class="price-container">
-                    <p class="price">200 &#8381;</p> 
+                    <p class="price">200Тг</p> 
                     <button class="korzina">В корзину</button>
                 </div>
             </div>
