--- a/project/pizza.html
+++ b/project/pizza.html
@@ -28,7 +28,7 @@
                 <h3>Пицца вегетарианская</h3>
                 <p class="opisanie">сыр моцарелла,шапиньоны, помидоры, болгарский перец</p>
                 <div class="price-container">
-                    <p class="price">500 &#8381;</p> 
+                    <p class="price">500 Т</p> 
                     <button class="korzina" id="kor">В корзину</button>
                 </div>
             </div>
@@ -37,7 +37,7 @@
                 <h3>Пицца 4 сезона</h3>
                 <p class="opisanie">сыр моцарелла, куриное филе, помидоры, шапиньоны, салями</p>
                 <div class="price-container">
-                    <p class="price">800 &#8381;</p> 
+                    <p class="price">800Тг</p> 
                     <button class="korzina">В корзину</button>
                 </div>
             </div>
@@ -46,7 +46,7 @@
                 <h3>Пицца пепперони</h3>
                 <p class="opisanie">сыр моцарелла, салями (Халял)</p>
                 <div class="price-container">
-                    <p class="price">1000 &#8381;</p> 
+                    <p class="price">1000Тг</p> 
                     <button class="korzina">В корзину</button>
                 </div>
             </div>
@@ -55,7 +55,7 @@
                 <h3>Пицца болоньезе</h3>
                 <p class="opisanie">сыр моцарелла, фарш говяжий, болгарский перец</p>
                 <div class="price-container">
-                    <p class="price">750 &#8381;</p> 
+                    <p class="price">750Тг</p> 
                     <button class="korzina">В корзину</button>
                 </div>
             </div>
@@ -64,7 +64,7 @@
                 <h3>Грибная</h3>
                 <p class="opisanie">сыр моцарелла, шампиньоны   </p>
                 <div class="price-container">
-                    <p class="price">500 &#8381;</p>                
+                    <p class="price">500Тг</p>                
                      <button class="korzina">В корзину</button>
                 </div>
             </div>
@@ -73,7 +73,7 @@
                 <h3>Ветчина с грибами</h3>
                 <p class="opisanie">сыр моцарелла, ветчина, шампиньоны</p>
                 <div class="price-container">
-                    <p class="price">500 &#8381;</p> 
+                    <p class="price">500Тг</p> 
                     <button class="korzina">В корзину</button>
     
                 </div>
@@ -84,7 +84,7 @@
                 </h3>
                 <p class="opisanie">сыр моцарелла, куриное филе, шампиньоны</p>
                 <div class="price-container">
-                    <p class="price">500 &#8381;</p> 
+                    <p class="price">500Тг</p> 
                     <button class="korzina">В корзину</button>
     
                 </div>
@@ -100,7 +100,7 @@
                 <h3>Деревенская</h3>
                 <p class="opisanie">сыр моцарелла, шампиньоны, помидоры</p>
                 <div class="price-container">
-                    <p class="price">500 &#8381;</p> 
+                    <p class="price">500NuТг</p> 
                     <button class="korzina">В корзину</button>
                 </div>
             </div>
