--- a/project/rolly.html
+++ b/project/rolly.html
@@ -25,7 +25,7 @@
                 <h3>Филадельфия</h3>
                 <p class="opisanie">семга, сыр</p>
                 <div class="price-container">
-                    <p class="price">500 &#8381;</p> 
+                    <p class="price">500Тг</p> 
                     <button class="korzina" id="kor">В корзину</button>
                 </div>
             </div>
@@ -34,7 +34,7 @@
                 <h3>ПФила с огурцами</h3>
                 <p class="opisanie">сыр моцарелла, куриное филе</p>
                 <div class="price-container">
-                    <p class="price">800 &#8381;</p> 
+                    <p class="price">800Тг</p> 
                     <button class="korzina">В корзину</button>
                 </div>
             </div>
@@ -43,7 +43,7 @@
                 <h3>Онигара</h3>
                 <p class="opisanie">угорь, унаги соус, кунжут, сыр</p>
                 <div class="price-container">
-                    <p class="price">1000 &#8381;</p> 
+                    <p class="price">1000Тг</p> 
                     <button class="korzina">В корзину</button>
                 </div>
             </div>
@@ -52,7 +52,7 @@
                 <h3>Дракон</h3>
                 <p class="opisanie">угорь, краб, огурец</p>
                 <div class="price-container">
-                    <p class="price">750 &#8381;</p> 
+                    <p class="price">750Тг</p> 
                     <button class="korzina">В корзину</button>
                 </div>
             </div>
@@ -61,7 +61,7 @@
                 <h3>Кавасаки</h3>
                 <p class="opisanie">жаренный лосось, блинчик, сыр</p>
                 <div class="price-container">
-                    <p class="price">500 &#8381;</p>                
+                    <p class="price">500Тг</p>                
                      <button class="korzina">В корзину</button>
                 </div>
             </div>
@@ -70,7 +70,7 @@
                 <h3>Фристайл</h3>
                 <p class="opisanie">креветки, краб, огурец, сыр </p>
                 <div class="price-container">
-                    <p class="price">500 &#8381;</p> 
+                    <p class="price">500Тг</p> 
                     <button class="korzina">В корзину</button>
     
                 </div>
@@ -80,7 +80,7 @@
                 <h3>Калифорния Green</h3>
                 <p class="opisanie">сыр моцарелла, куриное филе</p>
                 <div class="price-container">   
-                    <p class="price">500 &#8381;</p> 
+                    <p class="price">500Тг</p> 
                     <button class="korzina">В корзину</button>
     
                 </div>
@@ -90,7 +90,7 @@
                 <h3>Филадельфия летняя</h3>
                 <p class="opisanie">Огурец, творожный сыр, рис</p>
                 <div class="price-container">
-                    <p class="price">250 &#8381;</p>
+                    <p class="price">250Тг</p>
                     <button class="korzina">В корзину</button>
                 </div>
             </div>
@@ -99,7 +99,7 @@
                 <h3>Фила с огурцами</h3>
                 <p class="opisanie">семга, сыр, кунжут</p>
                 <div class="price-container">
-                    <p class="price">500 &#8381;</p> 
+                    <p class="price">500Тг</p> 
                     <button class="korzina">В корзину</button>
                 </div>
             </div>
