--- a/project/sous.html
+++ b/project/sous.html
@@ -25,7 +25,7 @@
             <h3>Филадельфия</h3>
             <p class="opisanie">семга, сыр</p>
             <div class="price-container">
-                <p class="price">500 &#8381;</p> 
+                <p class="price">500Тг</p> 
                 <button class="korzina" id="kor">В корзину</button>
             </div>
         </div>
@@ -34,7 +34,7 @@
             <h3>ПФила с огурцами</h3>
             <p class="opisanie">сыр моцарелла, куриное филе</p>
             <div class="price-container">
-                <p class="price">800 &#8381;</p> 
+                <p class="price">800Тг</p> 
                 <button class="korzina">В корзину</button>
             </div>
         </div>
@@ -43,7 +43,7 @@
             <h3>Онигара</h3>
             <p class="opisanie">угорь, унаги соус, кунжут, сыр</p>
             <div class="price-container">
-                <p class="price">1000 &#8381;</p> 
+                <p class="price">1000Тг</p> 
                 <button class="korzina">В корзину</button>
             </div>
         </div>
@@ -53,7 +53,7 @@
             <div class="dd">
                 <p class="opisanie">угорь, краб, огурец</p>
                 <div class="price-container">
-                    <p class="price">750 &#8381;</p> 
+                    <p class="price">750Тг</p> 
                     <button class="korzina">В корзину</button>
                 </div>
             </div>
@@ -63,7 +63,7 @@
             <h3>Кавасаки</h3>
             <p class="opisanie">жаренный лосось, блинчик, сыр</p>
             <div class="price-container">
-                <p class="price">500 &#8381;</p>                
+                <p class="price">500Тг</p>                
                  <button class="korzina">В корзину</button>
             </div>
         </div>
