--- a/project/zhapechenniyeRoll.html
+++ b/project/zhapechenniyeRoll.html
@@ -25,7 +25,7 @@
                 <h3>Крылышки 8 штук</h3>
                 <p class="opisanie">острые куринный крылышки</p>
                 <div class="price-container">
-                    <p class="price">500 &#8381;</p> 
+                    <p class="price">500Тг</p> 
                     <button class="korzina">В корзину</button>
                 </div>
             </div>
@@ -34,7 +34,7 @@
                 <h3>Крылышки 16  штук</h3>
                 <p class="opisanie">острые куринный крылышки</p>
                 <div class="price-container">
-                    <p class="price">800 &#8381;</p> 
+                    <p class="price">800Тг</p> 
                     <button class="korzina">В корзину</button>
                 </div>
             </div>
@@ -43,7 +43,7 @@
                 <h3>Крылышки 25 штук</h3>
                 <p class="opisanie">острые куринный крылышки</p>
                 <div class="price-container">
-                    <p class="price">1000 &#8381;</p> 
+                    <p class="price">1000Тг</p> 
                     <button class="korzina">В корзину</button>
                 </div>
             </div>
@@ -52,7 +52,7 @@
                 <h3>Куринный нагетсы</h3>
                 <p class="opisanie">Куринный нагетсы</p>
                 <div class="price-container">
-                    <p class="price">750 &#8381;</p> 
+                    <p class="price">750Тг</p> 
                     <button class="korzina">В корзину</button>
                 </div>
             </div>
@@ -61,7 +61,7 @@
                 <h3>Корн док</h3>
                 <p class="opisanie">сардельки в кляре</p>
                 <div class="price-container">
-                    <p class="price">500 &#8381;</p> 
+                    <p class="price">500Тг</p> 
                     <button class="korzina">В корзину</button>
                 </div>
             </div>
@@ -70,7 +70,7 @@
                 <h3 style="padding-top: 90px;">Фри</h3>
                 <p class="opisanie">картофельные фри</p>
                 <div class="price-container">
-                    <p class="price">500 &#8381;</p> 
+                    <p class="price">500Тг</p> 
                     <button class="korzina">В корзину</button>
                 </div>
             </div>
@@ -79,7 +79,7 @@
                 <h3>Сырныйе палочки</h3>
                 <p class="opisanie">острые куринный крылышки</p>
                 <div class="price-container">
-                    <p class="price">500 &#8381;</p> 
+                    <p class="price">500Тг</p> 
                     <button class="korzina">В корзину</button>
                 </div>
             </div>
