--- a/project/zharRolls.html
+++ b/project/zharRolls.html
@@ -25,7 +25,7 @@
                 <h3>Фреш</h3>
                 <p class="opisanie">кур.филе, огурцы, сыр, свежий</p>
                 <div class="price-container">
-                    <p class="price">500 &#8381;</p> 
+                    <p class="price">500Тг</p> 
                     <button class="korzina">В корзину</button>
                 </div>
             </div>
@@ -34,7 +34,7 @@
                 <h3>Америка</h3>
                 <p class="opisanie">Лосось, угорь, огурцы,</p>
                 <div class="price-container">
-                    <p class="price">800 &#8381;</p> 
+                    <p class="price">800Тг</p> 
                     <button class="korzina">В корзину</button>
                 </div>
             </div>
@@ -43,7 +43,7 @@
                 <h3>Угорь темпура</h3>
                 <p class="opisanie">угорь, сыр, унаги соус</p>
                 <div class="price-container">
-                    <p class="price">1000 &#8381;</p> 
+                    <p class="price">1000Тг</p> 
                     <button class="korzina">В корзину</button>
                 </div>
             </div>
@@ -52,7 +52,7 @@
                 <h3>Эби темпура</h3>
                 <p class="opisanie">креветки, чесночный соус,</p>
                 <div class="price-container">
-                    <p class="price">750 &#8381;</p> 
+                    <p class="price">750Тг</p> 
                     <button class="korzina">В корзину</button>
                 </div>
             </div>
@@ -61,7 +61,7 @@
                 <h3>Лосось темпура</h3>
                 <p class="opisanie">лосось, сыр</p>
                 <div class="price-container">
-                    <p class="price">500 &#8381;</p> 
+                    <p class="price">500Тг</p> 
                     <button class="korzina">В корзину</button>
                 </div>
             </div>
@@ -70,7 +70,7 @@
                 <h3>сливочный сыр, лосось, имбирь</h3>
                 <p class="opisanie">сливочный сыр, лосось, имбирь</p>
                 <div class="price-container">
-                    <p class="price">500 &#8381;</p> 
+                    <p class="price">500Тг</p> 
                     <button class="korzina">В корзину</button>
                 </div>
             </div>
@@ -79,7 +79,7 @@
                 <h3 style="padding-top: 80px;">Цезарь</h3>
                 <p class="opisanie">куриное филе, огурцы</p>
                 <div class="price-container">
-                    <p class="price">500 &#8381;</p> 
+                    <p class="price">500Тг</p> 
                     <button class="korzina">В корзину</button>
                 </div>
             </div>
@@ -88,7 +88,7 @@
                 <h3>Осака темпура</h3>
                 <p class="opisanie">семга, угорь, сыр</p>
                 <div class="price-container">
-                    <p class="price">500 &#8381;</p> 
+                    <p class="price">500Тг</p> 
                     <button class="korzina">В корзину</button>
                 </div>
             </div>
